Standardized English and Chinese titles

--- a/01_agama/ekottarika/02/EA_02_01.md
+++ b/01_agama/ekottarika/02/EA_02_01.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 1. The Buddha'
+title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 1. Recollecting the Buddha'
 type: kramdown
 base: ../../../
 previous: ../01/EA_01_01.html
@@ -11,8 +11,8 @@ next: EA_02_02.html
 <h2>Chapter 2: The Ten Recollections</h2>
 
 <table class="trans">
-  <th class='ch'>(一)</th>
-  <th class='en'>1. The Buddha</th>
+  <th class='ch'>(一) 念佛</th>
+  <th class='en'>1. Recollecting the Buddha</th>
   <tr>
     <td class='ch' title='T125.2.552c9'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
