--- a/01_agama/ekottarika/02/EA_02_02.md
+++ b/01_agama/ekottarika/02/EA_02_02.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 2. The Dharma'
+title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 2. Recollecting the Dharma'
 type: kramdown
 base: ../../../
 previous: EA_02_01.html
@@ -11,8 +11,8 @@ next: EA_02_03.html
 <h2>Chapter 2: The Ten Recollections</h2>
 
 <table class="trans">
-  <th class='ch'>(二)</th>
-  <th class='en'>2. The Dharma</th>
+  <th class='ch'>(二) 念法</th>
+  <th class='en'>2. Recollecting the Dharma</th>
   <tr>
     <td class='ch' title='T125.2.552c17'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
