--- a/01_agama/ekottarika/02/EA_02_06.md
+++ b/01_agama/ekottarika/02/EA_02_06.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 6. The Gods'
+title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 6. Recollecting the Gods'
 type: kramdown
 base: ../../../
 previous: EA_02_05.html
@@ -11,8 +11,8 @@ next: EA_02_07.html
 <h2>Chapter 2: The Ten Recollections</h2>
 
 <table class="trans">
-  <th class='ch'>(六)</th>
-  <th class='en'>6. The Gods</th>
+  <th class='ch'>(六) 念天</th>
+  <th class='en'>6. Recollecting the Gods</th>
   <tr>
     <td class='ch' title='T125.2.553a20'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
