--- a/01_agama/ekottarika/02/EA_02_08.md
+++ b/01_agama/ekottarika/02/EA_02_08.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 8. Breathing'
+title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 8. Recollecting Breathing'
 type: kramdown
 base: ../../../
 previous: EA_02_07.html
@@ -11,8 +11,8 @@ next: EA_02_09.html
 <h2>Chapter 2: The Ten Recollections</h2>
 
 <table class="trans">
-  <th class='ch'>(八)</th>
-  <th class='en'>8. Breathing</th>
+  <th class='ch'>(八) 念安般</th>
+  <th class='en'>8. Recollecting Breathing</th>
   <tr>
     <td class='ch' title='T125.2.553b7'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
