--- a/01_agama/ekottarika/03/EA_03_01.md
+++ b/01_agama/ekottarika/03/EA_03_01.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 1. The Buddha'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 1. Recollecting the Buddha'
 type: kramdown
 base: ../../../
 previous: ../02/EA_02_10.html
@@ -12,7 +12,7 @@ next: EA_03_02.html
 
 <table class="trans">
   <th class='ch'>(一) 念佛</th>
-  <th class='en'>1. The Buddha</th>
+  <th class='en'>1. Recollecting the Buddha</th>
   <tr>
     <td class='ch' title='T125.2.554a7'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
