--- a/01_agama/ekottarika/03/EA_03_08.md
+++ b/01_agama/ekottarika/03/EA_03_08.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 8. Breathing'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 8. Recollecting Breathing'
 type: kramdown
 base: ../../../
 previous: EA_03_07.html
@@ -12,7 +12,7 @@ next: EA_03_09.html
 
 <table class="trans">
   <th class='ch'>(八) 念安般</th>
-  <th class='en'>8. Breathing</th>
+  <th class='en'>8. Recollecting Breathing</th>
   <tr>
     <td class='ch' title='T125.2.556a15'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
