--- a/01_agama/ekottarika/09/EA_09_08.md
+++ b/01_agama/ekottarika/09/EA_09_08.md
@@ -11,7 +11,7 @@ next: EA_09_09.html
 <h2>Chapter 9: The Only Son</h2>
 
 <table class="trans">
-  <th class='ch'>(八)</th>
+  <th class='ch'>(八) 女想</th>
   <th class='en'>8. A Woman’s Perception</th>
   <tr>
     <td class='ch' title='T125.2.563a27'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
