--- a/01_agama/ekottarika/12/EA_12_01.md
+++ b/01_agama/ekottarika/12/EA_12_01.md
@@ -11,7 +11,7 @@ next: EA_12_02.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(一)</th>
+  <th class='ch'>(一) 意止</th>
   <th class='en'>1. The Abodes of Mindfulness</th>
   <tr>
     <td class='ch' title='T125.2.568a1'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
