--- a/01_agama/ekottarika/12/EA_12_03.md
+++ b/01_agama/ekottarika/12/EA_12_03.md
@@ -11,7 +11,7 @@ next: EA_12_04.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(三)</th>
+  <th class='ch'>(三) 最尊</th>
   <th class='en'>3. The Most Honored</th>
   <tr>
     <td class='ch' title='T125.2.569b19'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
