--- a/01_agama/ekottarika/12/EA_12_04.md
+++ b/01_agama/ekottarika/12/EA_12_04.md
@@ -11,7 +11,7 @@ next: EA_12_05.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(四)</th>
+  <th class='ch'>(四) 瞻視病</th>
   <th class='en'>4. Watching over the Sick</th>
   <tr>
     <td class='ch' title='T125.2.569b29'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
