--- a/01_agama/ekottarika/12/EA_12_05.md
+++ b/01_agama/ekottarika/12/EA_12_05.md
@@ -11,7 +11,7 @@ next: EA_12_06.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(五)</th>
+  <th class='ch'>(五) 譽謗</th>
   <th class='en'>5. Praise and Slander</th>
   <tr>
     <td class='ch' title='T125.2.569c13'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
