--- a/01_agama/ekottarika/12/EA_12_06.md
+++ b/01_agama/ekottarika/12/EA_12_06.md
@@ -11,7 +11,7 @@ next: EA_12_07.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(六)</th>
+  <th class='ch'>(六) 年高</th>
   <th class='en'>6. Senior Years</th>
   <tr>
     <td class='ch' title='T125.2.570a23'>聞如是： 一時，佛在羅閲城、迦蘭陀竹園所。 與大比丘眾五百人倶。</td>
