--- a/01_agama/ekottarika/12/EA_12_07.md
+++ b/01_agama/ekottarika/12/EA_12_07.md
@@ -11,7 +11,7 @@ next: EA_12_08.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(七)</th>
+  <th class='ch'>(七) 提婆達兜</th>
   <th class='en'>7. Devadatta</th>
   <tr>
     <td class='ch' title='T125.2.570b20'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
