--- a/01_agama/ekottarika/12/EA_12_08.md
+++ b/01_agama/ekottarika/12/EA_12_08.md
@@ -11,7 +11,7 @@ next: EA_12_09.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(八)</th>
+  <th class='ch'>(八) 提婆達兜</th>
   <th class='en'>8. The Devadatta (2)</th>
   <tr>
     <td class='ch' title='T125.2.570c2'>聞如是： 一時，佛在羅閲城、耆闍崛山中。 與大比丘眾五百人倶。</td>
