--- a/01_agama/ekottarika/12/EA_12_09.md
+++ b/01_agama/ekottarika/12/EA_12_09.md
@@ -11,7 +11,7 @@ next: EA_12_10.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(九)</th>
+  <th class='ch'>(九) 皮</th>
   <th class='en'>9. Skin</th>
   <tr>
     <td class='ch' title='T125.2.570c26'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
