--- a/01_agama/ekottarika/12/EA_12_10.md
+++ b/01_agama/ekottarika/12/EA_12_10.md
@@ -11,7 +11,7 @@ next: ../13/EA_13_01.html
 <h2>Chapter 12: The Single-Entry Path</h2>
 
 <table class="trans">
-  <th class='ch'>(一〇)</th>
+  <th class='ch'>(一〇) 師利羅</th>
   <th class='en'>10. Śrīla</th>
   <tr>
     <td class='ch' title='T125.2.571a5'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
