--- a/01_agama/ekottarika/02/EA_02_10.md
+++ b/01_agama/ekottarika/02/EA_02_10.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 10. Death'
+title: 'The Numerical Discourses | Chapter 2: The Ten Recollections | 10. Recollecting Death'
 type: kramdown
 base: ../../../
 previous: EA_02_09.html
@@ -11,8 +11,8 @@ next: ../03/EA_03_01.html
 <h2>Chapter 2: The Ten Recollections</h2>
 
 <table class="trans">
-  <th class='ch'>(一〇)</th>
-  <th class='en'>10. Death</th>
+  <th class='ch'>(一〇) 念死</th>
+  <th class='en'>10. Recollecting Death</th>
   <tr>
     <td class='ch' title='T125.2.553b23'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
