--- a/01_agama/ekottarika/03/EA_03_05.md
+++ b/01_agama/ekottarika/03/EA_03_05.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 5. Generosity'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 5. Recollecting Generosity'
 type: kramdown
 base: ../../../
 previous: EA_03_04.html
@@ -12,7 +12,7 @@ next: EA_03_06.html
 
 <table class="trans">
   <th class='ch'>(五) 念施</th>
-  <th class='en'>5. Generosity</th>
+  <th class='en'>5. Recollecting Generosity</th>
   <tr>
     <td class='ch' title='T125.2.555a29'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
