--- a/01_agama/ekottarika/03/EA_03_09.md
+++ b/01_agama/ekottarika/03/EA_03_09.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 9. The Body'
+title: 'The Numerical Discourses | Chapter 3: Broader Explanations | 9. Recollecting the Body'
 type: kramdown
 base: ../../../
 previous: EA_03_08.html
@@ -12,7 +12,7 @@ next: EA_03_10.html
 
 <table class="trans">
   <th class='ch'>(九) 念身</th>
-  <th class='en'>9. The Body</th>
+  <th class='en'>9. Recollecting the Body</th>
   <tr>
     <td class='ch' title='T125.2.556b15'>聞如是： 一時，佛在舍衞國、祇樹、給孤獨園。</td>
     <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.</td>
